Fix crash on older Java versions